--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <li style="font-size: medium; font-family: 'Nunito', Times, serif; font-style:normal;">
                                     <b>RYMEC,Ballari</b>
                                 </li>
-                                <li>KSEEB</li>
+                                <li>VTU</li>
                                 <li>8.29 CGPA</li>
                             </ul>
                         </div>
